# AVP

./: CMakeLists.txt  README.md  main.cpp
Intrinsics/: lib.cpp  lib.hpp
NoSIMD/: lib.cpp  lib.hpp
SIMD/: Matrix.hpp  MatrixRec.hpp  MultTraits.hpp  NaiveMatrix.hpp  lib.cpp  lib.hpp
config/: Config.hpp.in
src/: Benchmark.hpp  main.cpp
